<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Cineview</string>

    <string name="content_description_app_logo">Cineview Logo</string>
    <string name="content_description_movie_backdrop">Movie Backdrop</string>
    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="content_description_favorite_button">Favorite Button</string>
    <string name="content_description_share_button">Share Button</string>

    <string name="error_default">Erro desconhecido, tente novamente.</string>
    <string name="error_favorite">Sem conexão no momoento…\nNão foi possível completar a ação!</string>
    <string name="error_login">Não possível se conectar com o %s.</string>

    <string name="tab_item_1_movie_frag">Elenco</string>
    <string name="tab_item_2_movie_frag">Mais Detalhes</string>

    <string name="release_date_movie_frag">Data de Lançamento:</string>
    <string name="runtime_movie_frag">Duração do Filme:</string>
    <string name="content_description_cast_member_image">Cast Member</string>

    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="esqueci_minha_senha">esqueci minha senha</string>
    <string name="entrar_com_facebook">Entrar com Facebook</string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="n_o_tem_uma_conta_registre_se">Não tem uma conta?Registre-se.</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="email">Email</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="enviar">Enviar</string>

    <string name="bottom_nav_item_home">Home</string>
    <string name="bottom_nav_item_search">Buscar</string>
    <string name="bottom_nav_item_favorite">Favoritos</string>
    <string name="bottom_nav_item_account">Conta</string>

    <string name="home_frag_now_playing">Em cartaz</string>
    <string name="home_frag_top_rated">Melhores Avaliados</string>
    <string name="home_frag_popular">Mais Visualizados</string>
    <string name="home_frag_trending">Tendências da Semana</string>

    <string name="share_message">Estava dando uma olhada nas informações do filme \"%s\" através do Cineview, o melhor app de informações sobre filmes do mundo \uD83D\uDE03\n\nNunca ouviu falar dele?? Tá perdendo tempo ein \uD83D\uDE43\n\nAcesse o link e baixe agora mesmo: https://play.google.com/store/apps/developer?id=Digital+House+Brasil</string>

    <string name="facebook_app_id">2075326055965433</string>

    <string name="user_anonymous">Usuário Anônimo</string>
    <string name="app_data_on_device">Dados do Aplicativo no Dispositivo</string>
    <string name="account_data">Dados da Conta</string>
    <string name="share_count">Compartilhamentos Realizados:</string>
    <string name="favorite_count">Quant. de Filmes Favoritados:</string>
    <string name="account_email">Email:</string>
    <string name="account_phone">Celular:</string>
    <string name="account_no_data">Não Informado</string>
    <string name="logout">Sair do Aplicativo</string>
</resources>