<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:title="@string/bottom_nav_item_home"
        android:icon="@drawable/ic_baseline_home" />

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:title="@string/bottom_nav_item_search"
        android:icon="@drawable/ic_baseline_search" />

    <item
        android:id="@+id/favoriteFragment"
        android:enabled="true"
        android:title="@string/bottom_nav_item_favorite"
        android:icon="@drawable/ic_baseline_favorite_enable" />

    <item
        android:id="@+id/accountFragment"
        android:enabled="true"
        android:title="@string/bottom_nav_item_account"
        android:icon="@drawable/ic_baseline_account" />

</menu>