<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".features.account.presentation.ui.AccountFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/accountProfilePhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_default"
        android:src="@drawable/ic_baseline_account_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/user_anonymous"
        android:textColor="@color/white"
        android:textSize="@dimen/title_1_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/accountProfilePhoto"
        app:layout_constraintStart_toStartOf="@id/accountProfilePhoto"
        app:layout_constraintEnd_toEndOf="@id/accountProfilePhoto"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountAppData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/app_data_on_device"
        android:textColor="@color/white"
        android:textSize="@dimen/subtitle_1_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/accountProfileName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="@dimen/margin_low"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/accountAppData"
        app:layout_constraintStart_toStartOf="@id/accountAppData"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountDeviceShareCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/share_count"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/subtitle_2_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toStartOf="@id/divider1"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountDeviceShareCountValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        tools:text="321"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/subtitle_2_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/accountDeviceShareCount"
        app:layout_constraintBottom_toBottomOf="@id/accountDeviceShareCount"
        app:layout_constraintStart_toEndOf="@id/accountDeviceShareCount"
        app:layout_constraintEnd_toEndOf="@id/divider1"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountDeviceFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/favorite_count"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/subtitle_2_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/accountDeviceShareCount"
        app:layout_constraintStart_toStartOf="@id/accountDeviceShareCount"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountDeviceFavoriteValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        tools:text="123"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/subtitle_2_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/accountDeviceFavorite"
        app:layout_constraintBottom_toBottomOf="@id/accountDeviceFavorite"
        app:layout_constraintStart_toEndOf="@id/accountDeviceFavorite"
        app:layout_constraintEnd_toEndOf="@id/divider1"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountProfileData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/account_data"
        android:textColor="@color/white"
        android:textSize="@dimen/subtitle_1_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/accountDeviceFavorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="@dimen/margin_low"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/accountProfileData"
        app:layout_constraintStart_toStartOf="@id/accountProfileData"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/account_email"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/subtitle_2_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintStart_toStartOf="@id/divider2"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountProfileEmailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/account_no_data"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/subtitle_2_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/accountProfileEmail"
        app:layout_constraintBottom_toBottomOf="@id/accountProfileEmail"
        app:layout_constraintStart_toEndOf="@id/accountProfileEmail"
        app:layout_constraintEnd_toEndOf="@id/divider1"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountProfilePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/account_phone"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/subtitle_2_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/accountProfileEmail"
        app:layout_constraintStart_toStartOf="@id/accountProfileEmail"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/accountProfilePhoneValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/account_no_data"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/subtitle_2_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/accountProfilePhone"
        app:layout_constraintBottom_toBottomOf="@id/accountProfilePhone"
        app:layout_constraintStart_toEndOf="@id/accountProfilePhone"
        app:layout_constraintEnd_toEndOf="@id/divider2"
        />

    <Button
        android:id="@+id/accountButtonLogout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="@dimen/margin_default"
        android:backgroundTint="@color/red_dark"
        android:drawableLeft="@drawable/ic_logout"
        android:text="@string/logout"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>