<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context=".features.login.LoginTelaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:src="@drawable/logo_full"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"/>

        <View
            app:layout_constraintTop_toBottomOf="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_user"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo"
            tools:layout_editor_absoluteX="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="match_parent"
                android:hint="@string/usuario"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_pass"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/forgotten"
            app:layout_constraintTop_toBottomOf="@+id/input_user"
            tools:layout_editor_absoluteX="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/senha"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotten"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:focusable="true"
            android:paddingTop="2dp"
            android:text="@string/esqueci_minha_senha"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/input_pass"
            app:layout_constraintStart_toStartOf="@+id/input_pass"
            app:layout_constraintTop_toBottomOf="@+id/input_pass" />

        <Button
            android:id="@+id/botao_entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="Entrar"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/forgotten"
            android:backgroundTint="@color/red_dark"
            />


        <TextView
            android:id="@+id/or"
            android:text="OU"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/botao_entrar"
            android:layout_margin="30dp"
            android:gravity="center"
            />

        <Button
            android:id="@+id/botao_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/faceicon4"
            android:layout_margin="30dp"
            android:hint="@string/entrar_com_facebook"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/or"
            android:backgroundTint="@color/purple_700"
            />

        <Button

            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/entrar_com_google"
            android:drawableLeft="@drawable/google"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/botao_facebook"
            android:backgroundTint="@color/white"
            />


        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="80dp"
            android:text="@string/n_o_tem_uma_conta_registre_se"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/google"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

